updated with media

--- a/stats/index.html
+++ b/stats/index.html
@@ -12,7 +12,7 @@
 <!--   Support the Free Software Foundation   -->
 <!--           (http://www.fsf.org)           -->
 <!--                                          -->
-<!-- *** Generated: 03-Apr-2017 02:06 EDT *** -->
+<!-- *** Generated: 26-Apr-2017 02:06 EDT *** -->
 
 <HTML lang="en">
 <HEAD>
@@ -23,7 +23,7 @@
 <H2>Usage statistics for crown.tech</H2>
 <SMALL><STRONG>
 Summary by Month<BR>
-Generated 03-Apr-2017 02:06 EDT<BR>
+Generated 26-Apr-2017 02:06 EDT<BR>
 </STRONG></SMALL>
 <CENTER>
 <HR>
@@ -48,16 +48,16 @@ Generated 03-Apr-2017 02:06 EDT<BR>
 <TH ALIGN=center BGCOLOR="#00805c"><FONT SIZE="-1">Hits</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TD NOWRAP><A HREF="usage_201704.html"><FONT SIZE="-1">Apr 2017</FONT></A></TD>
-<TD ALIGN=right><FONT SIZE="-1">4472</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">4014</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">672</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">330</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">746</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">785409</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">992</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">2017</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">12043</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">13417</FONT></TD></TR>
+<TD ALIGN=right><FONT SIZE="-1">7885</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">7182</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">1054</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">500</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">8081</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">12519617</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">13006</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">27406</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">186740</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">205035</FONT></TD></TR>
 <TR><TD NOWRAP><A HREF="usage_201703.html"><FONT SIZE="-1">Mar 2017</FONT></A></TD>
 <TD ALIGN=right><FONT SIZE="-1">10624</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">9201</FONT></TD>
@@ -71,11 +71,11 @@ Generated 03-Apr-2017 02:06 EDT<BR>
 <TD ALIGN=right><FONT SIZE="-1">74368</FONT></TD></TR>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TH BGCOLOR="#C0C0C0" COLSPAN=6 ALIGN=left><FONT SIZE="-1">Totals</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">6301391</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">5183</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">11776</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">76451</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">87785</FONT></TH></TR>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">18035599</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">17197</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">37165</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">251148</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">279403</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
 </TABLE>
 </CENTER>
