--- a/stats/index.html
+++ b/stats/index.html
@@ -12,7 +12,7 @@
 <!--   Support the Free Software Foundation   -->
 <!--           (http://www.fsf.org)           -->
 <!--                                          -->
-<!-- *** Generated: 02-May-2017 02:06 EDT *** -->
+<!-- *** Generated: 18-May-2017 02:06 EDT *** -->
 
 <HTML lang="en">
 <HEAD>
@@ -23,7 +23,7 @@
 <H2>Usage statistics for crown.tech</H2>
 <SMALL><STRONG>
 Summary by Month<BR>
-Generated 02-May-2017 02:06 EDT<BR>
+Generated 18-May-2017 02:06 EDT<BR>
 </STRONG></SMALL>
 <CENTER>
 <HR>
@@ -48,16 +48,16 @@ Generated 02-May-2017 02:06 EDT<BR>
 <TH ALIGN=center BGCOLOR="#00805c"><FONT SIZE="-1">Hits</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TD NOWRAP><A HREF="usage_201705.html"><FONT SIZE="-1">May 2017</FONT></A></TD>
-<TD ALIGN=right><FONT SIZE="-1">3589</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">3211</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">519</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">246</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">463</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">424218</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">493</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">1038</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">6422</FONT></TD>
-<TD ALIGN=right><FONT SIZE="-1">7179</FONT></TD></TR>
+<TD ALIGN=right><FONT SIZE="-1">5360</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">4875</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">730</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">400</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">4963</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">5938230</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">7217</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">13152</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">87753</FONT></TD>
+<TD ALIGN=right><FONT SIZE="-1">96481</FONT></TD></TR>
 <TR><TD NOWRAP><A HREF="usage_201704.html"><FONT SIZE="-1">Apr 2017</FONT></A></TD>
 <TD ALIGN=right><FONT SIZE="-1">7895</FONT></TD>
 <TD ALIGN=right><FONT SIZE="-1">7157</FONT></TD>
@@ -71,11 +71,11 @@ Generated 02-May-2017 02:06 EDT<BR>
 <TD ALIGN=right><FONT SIZE="-1">236856</FONT></TD></TR>
 <TR><TH HEIGHT=4></TH></TR>
 <TR><TH BGCOLOR="#C0C0C0" COLSPAN=6 ALIGN=left><FONT SIZE="-1">Totals</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">14877498</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">15517</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">32474</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">221154</FONT></TH>
-<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">244035</FONT></TH></TR>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">20391510</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">22241</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">44588</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">302485</FONT></TH>
+<TH BGCOLOR="#C0C0C0" ALIGN=right><FONT SIZE="-1">333337</FONT></TH></TR>
 <TR><TH HEIGHT=4></TH></TR>
 </TABLE>
 </CENTER>
